complete exercise 2